--- a/was_wash.ini
+++ b/was_wash.ini
@@ -1,62 +1,46 @@
-################################################################################ 
-# File :    was_wash.ini : wordt gelezen door was_wash.sh, het schoningsscript.
-#           In deze ini file staan de directories die geschoond moeten worden
-#           en hoe dat gedaan moet worden.
-# Info:     Regels die met een # beginnen zijn commentaar.
-#           Iedere regel bevat 5 velden, gescheiden door ":". De velden zijn:
+################################################################################
+# File :    was_wash.ini : is read by was_wash.sh, the main cleaning script.
+#           In this ini file are all the directories mentioned
+#           that need to be cleaned
+# Info:     Lines starting with a # are comments.
+#           Every line contains five spaces, separated by ":". The different
+#           Spaces are:
 #
-# WasID:    LOGNAME als regular expression. Dus 'ewt.' matcht ewto, ewtt, ewta,
-#           ewtp
-# Action:   S (simple) schoont alleen de gegeven directory. (Maar omdat de
-#             directory padnaam wildcards mag bevatten, kunnen het toch meer
-#             directories zijn.)
-#           R (recursive) schoont de gegeven directory en onderliggende
-#             directories. Verwijdert lege directories. Schoont geen 
-#             lost+found directories.
-#           M (Max KB) als de directory na het zippen van bestanden
-#             nog steeds meer dan het opgegeven aantal KB bevat,
-#             worden de oudste bestanden verwijderd totdat er minder dan
-#             het opgegeven aantal KB over is.
-#           T Touch. Voor open files en files die niet gezipped of verwijderd
-#             mogen worden. In plaats van een directory wordt een filenaam
-#             opgegeven en die file krijgt met `touch` een timestamp van "nu".
-#             Zip en Delete worden genegeerd.
-#             Het werkt helaas niet als de ZIP of DELETE  van een volgende
-#             {S|R|M} action op "0" staan.
-#             (Het is geen mooie oplossing, maar wel een practische.)
-# Zip:      leeftijd in dagen waarna en file gezipped mag worden. 
-#             -1 betekent: niet zippen.
-# Delete:   bij Action S of R: leeftijd in dagen waarna een file verwijderd moet
-#           worden. -1 betekent niet verwijderen.
+# WasID:    LOGNAME as regular expression. This means 'ewt.' matcht ewto, ewtt,
+#           ewtp for example
+# Action:   S (simple)
+#           R (recursive)
+#           M (Max KB) as the directory after zipping files
+#             Still contains more than the specified number of KB,
+#             The oldest files are deleted until there is less than
+#             Specified number of KB remains.
+#           T Touch. Use this option for files you don't want zipped or deleted
+#             The file or directory will get a timestamp from today. Zip and
+#             delete will be overruled by this option.
+# Zip:      Age in days the files or directories should be zipped.
+#             -1 means: do not zip.
+# Delete:   Using Action S or R: Age in days the files or directories should be
+#           deleted. -1 means: Do not remove.
 # Delete:   bij Action=M: maximum bytes die files in een directory mogen hebben.
-#           -1 betekent niet verwijderen.
-# Directory:Pad naar Directory. Mag variabelen en wildcards bevatten, maar geen
-#           spaties. Bij de T (Touch) action is dit het pad van een filenaam.
+#           -1 means: Do not remove.
+# Directory:Directory path. Do not use wildcards.
 #
-# Pas op:   De opgegeven regels worden één voor één uitgevoerd. Doordat
-#           wildcards in de directory naam voor mogen komen, kan eenzelfde pad
-#           vaker worden "behandeld". Bijv:
-#             was00:S:  8:  60:${HOME}/???/log
-#             was00:S:  8: 356:${HOME}/was/log
-#           In de tweede regel worden logfiles geen 356 dagen bewaard omdat ze
-#           door de eerste regel al na 60 dagen verwijderd worden.
-################################################################################ 
+#
+################################################################################
 # User:Action:Zip:Delete:Directory
-################################################################################ 
-#  Uitzonderingen: volgende files niet verwijderen of zippen
-# geen
-#  Opschoningsregels
-pcr:S:   -1:   8:/appl/pcr/backup
-pcr:S:   -1:  40:/appl/*/pcr/00/log/sched_log
-dwh:R:   -1: 400:/appl/*/dwh/00/backup
-ewt.:R:  -1: 400:/appl/*/ewt/00/backup
-dwh:R:   -1: 400:/appl/*/dwh/00/log/backup/dagwerk
-dwh:R:   -1: 761:/appl/*/dwh/00/log/backup/weekwerk
-dwh:R:   -1: 761:/appl/*/dwh/00/log/backup/maandwerk
-# de * aan het eind voorkomt dat de directory zelf wordt opgeruimd als die leeg is.
-dwh:R:   -1: 761:/appl/*/dwh/00/log/backup/kwartaalwerk/*
-dwh:R:   -1: 761:/appl/*/dwh/00/log/backup/jaarwerk/*
-dwh:R:   -1: 761:/appl/*/dwh/00/log/backup/adhocwerk/*
-dwh:S:   -1: 400:/appl/*/dwh/00/tran/in/db_input
-dwh:S:   -1: 400:/appl/*/dwh/00/tran/out/db_output
-dwh:S:   -1: 400:/appl/*/dwh/00/log/db_log
+################################################################################
+#  examples
+#pcr:S:   -1:   8:/appl/pcr/backup
+#pcr:S:   -1:  40:/appl/*/pcr/00/log/sched_log
+#dwh:R:   -1: 400:/appl/*/dwh/00/backup
+#ewt.:R:  -1: 400:/appl/*/ewt/00/backup
+#dwh:R:   -1: 400:/appl/*/dwh/00/log/backup/dagwerk
+#dwh:R:   -1: 761:/appl/*/dwh/00/log/backup/weekwerk
+#dwh:R:   -1: 761:/appl/*/dwh/00/log/backup/maandwerk
+# The * at the end prevent the directory to be zipped
+#dwh:R:   -1: 761:/appl/*/dwh/00/log/backup/kwartaalwerk/*
+#dwh:R:   -1: 761:/appl/*/dwh/00/log/backup/jaarwerk/*
+#dwh:R:   -1: 761:/appl/*/dwh/00/log/backup/adhocwerk/*
+#dwh:S:   -1: 400:/appl/*/dwh/00/tran/in/db_input
+#dwh:S:   -1: 400:/appl/*/dwh/00/tran/out/db_output
+#dwh:S:   -1: 400:/appl/*/dwh/00/log/db_log
