--- a/ap_wash.ini
+++ b/ap_wash.ini
@@ -1,5 +1,5 @@
 ################################################################################
-# File :    was_wash.ini : is read by was_wash.sh, the main cleaning script.
+# File :    ap_wash.ini : is read by ap_wash.sh, the main cleaning script.
 #           In this ini file are all the directories mentioned
 #           that need to be cleaned
 # Info:     Lines starting with a # are comments.
@@ -21,7 +21,7 @@
 #             -1 means: do not zip.
 # Delete:   Using Action S or R: Age in days the files or directories should be
 #           deleted. -1 means: Do not remove.
-# Delete:   bij Action=M: maximum bytes die files in een directory mogen hebben.
+# Delete:   Using Action=M: maximum bytes allow in a directory.
 #           -1 means: Do not remove.
 # Directory:Directory path. Do not use wildcards.
 #
